--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div id="bgm-control">
         <audio id="bgm" loop>
-            <source src="" type="audio/background-music.mp3">
+            <source src="audio/background-music.mp3" type="audio/mpeg">
         </audio>
         <button onclick="toggleBGM()">音乐 开/关</button>
     </div>
