--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </head>
 <body>
     <div id="intro-screen">
-        <div id="company-logo">AIBoB制作</div>
+        <div id="company-logo">AIBoB Games Hub荣誉出品</div>
         <div id="headphone-tip">佩戴耳机使用更佳</div>
         <button id="start-button">开始游戏</button>
     </div>
