--- a/hospital/index.html
+++ b/hospital/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
+    <style>
+        /* 内联关键样式以确保立即显示 */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #000;
+            z-index: 10000;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-family: "SimSun", serif;
+        }
+
+        #loading-progress {
+            width: 200px;
+            height: 2px;
+            background: rgba(255, 255, 255, 0.1);
+            margin: 20px 0;
+            position: relative;
+        }
+
+        #loading-bar {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 0%;
+            background: white;
+            transition: width 0.3s ease;
+        }
+
+        #loading-text {
+            font-size: 14px;
+            opacity: 0.7;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
     <title>医院，还有那位病人</title>
 </head>
 <body>
+    <div id="loading-screen">
+        <div id="loading-progress">
+            <div id="loading-bar"></div>
+        </div>
+        <div id="loading-text">正在加载游戏资源...</div>
+    </div>
+
     <div id="intro-screen">
         <div id="company-logo">AIBoB</div>
         <div id="studio-text">Game Studio</div>
