--- a/hospital/index.html
+++ b/hospital/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
     <style>
-        /* 内联关键样式以确保立即显示 */
+        /* 内联关键CSS以确保加载界面立即显示 */
         #loading-screen {
             position: fixed;
             top: 0;
@@ -25,24 +25,25 @@
         #loading-progress {
             width: 200px;
             height: 2px;
-            background: rgba(255, 255, 255, 0.1);
+            background: #333;
             margin: 20px 0;
             position: relative;
+            overflow: hidden;
         }
 
-        #loading-bar {
+        #progress-bar {
             position: absolute;
             left: 0;
             top: 0;
             height: 100%;
             width: 0%;
-            background: white;
+            background: #fff;
             transition: width 0.3s ease;
         }
 
         #loading-text {
             font-size: 14px;
-            opacity: 0.7;
+            margin-top: 10px;
         }
     </style>
     <link rel="stylesheet" href="styles.css">
@@ -51,12 +52,12 @@
 <body>
     <div id="loading-screen">
         <div id="loading-progress">
-            <div id="loading-bar"></div>
+            <div id="progress-bar"></div>
         </div>
         <div id="loading-text">正在加载游戏资源...</div>
     </div>
 
-    <div id="intro-screen">
+    <div id="intro-screen" style="display: none;">
         <div id="company-logo">AIBoB</div>
         <div id="studio-text">Game Studio</div>
         <div class="headphone-container">
