--- a/hospital/index.html
+++ b/hospital/index.html
@@ -98,7 +98,7 @@
             <div class="headphone-icon">🎧</div>
             <div id="headphone-tip">佩戴耳机使用更佳</div>
         </div>
-        <div id="loading-progress">资源加载中... 0%</br＞大约需要10秒以完成渲染</div>
+        <div id="loading-progress">大约需要10s渲染资源，加载中... 0%</div>
     </div>
 
     <div class="background-overlay" id="background-overlay"></div>
