--- a/hospital/index.html
+++ b/hospital/index.html
@@ -21,7 +21,7 @@
 
     <div id="bgm-control">
         <audio id="bgm" loop>
-            <source src="audio/background-music.ogg" type="audio/mpeg">
+            <source src="audio/background-music.mp3" type="audio/mpeg">
         </audio>
         <button onclick="toggleBGM()" id="bgm-button">音乐 关闭</button>
     </div>
