--- a/miao/index.html
+++ b/miao/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="intro-screen">
-        <div id="company-logo">AIBoB</div>
-        <div id="studio-text">Game Studio</div>
+        <div id="company-logo">AIBoB × XieAI</div>
+        <div id="studio-text">Joint issue</div>
         <div class="headphone-container">
             <div class="headphone-icon">🎧</div>
             <div id="headphone-tip">佩戴耳机使用更佳</div>
