--- a/miao/index.html
+++ b/miao/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <title>医院，还有那位病人</title>
+    <title>喵喵</title>
 </head>
 <body>
     <div id="intro-screen">
