--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
             <span class="story-status wip">开发中</span>
         </button>
 
+        <button class="story-button" onclick="window.location.href='miao/'">
+            喵喵日记
+            <span class="story-status wip">开发中</span>
+        </button>
+
         <button class="story-button" onclick="window.location.href='train/'">
             末班列车
             <span class="story-status wip">开发中</span>
